--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- Theme Styles -->
-  <link href="static/css/alpha.min.css" rel="stylesheet" type="text/css"/>
+  <link href="static/css/alpha.css" rel="stylesheet" type="text/css"/>
   <link href="static/css/custom.css" rel="stylesheet" type="text/css"/>
 </head>
 
